--- a/src/app/forms/form-2-edit.component.html
+++ b/src/app/forms/form-2-edit.component.html
@@ -250,15 +250,9 @@
                 </div>
 
                 <div class="group">
-                    <label>
-                        <input type="checkbox" name="q120" [(ngModel)]="form.questions[120].checked" 
-                            (change)="form.questions[121].checked = !form.questions[120].checked">
-                        <span>{{form.questions[120].question}}</span>
-                    </label>
-                    <label>
-                        <input type="checkbox" name="q121" [(ngModel)]="form.questions[121].checked" 
-                            (change)="form.questions[120].checked = !form.questions[121].checked">
-                        <span>{{form.questions[121].question}}</span>
+                    <label *ngFor="let question of form.questions.slice(120, 122)">
+                        <input type="checkbox" name="{{'q' + question.index}}" [(ngModel)]="question.checked"> 
+                        <span>{{question.question}}</span>
                     </label>
                 </div>
             </div>
