--- a/src/app/forms/form-1-edit.component.html
+++ b/src/app/forms/form-1-edit.component.html
@@ -715,21 +715,20 @@
                                     (selectionDone)="showClonedDatePicker = false"></datepicker>
                             </div>                    
                         </div>
-                    </div>    
-                    <br>
+                    </div>     
+                    <br> 
                     <div class="row">
                         <div class="col-md-2">
                             <label>Patient:</label>
                         </div>
                         <div class="col-md-10">
-                            <select [(ngModel)]="clonedPatientId" name="clonedPatientId" class="form-control">
-                                <option *ngFor="let clone of patients" [value]="clone.id" [selected]="clone.id == clonedPatientId">{{clone.lastName}}, {{clone.firstName}}</option>
-                            </select> 
+                            <input [(ngModel)]="clonedPatientName" name="clonedPatientName"
+                                [typeahead]="patientNames" class="form-control">
                         </div>
-                    </div>   
+                    </div>
                 </div>
                 <div class="modal-footer">
-                    <a class="btn btn-primary" (click)="cloneForm();cloneModal.hide();">Clone</a>
+                    <a class="btn btn-primary" (click)="cloneForm();cloneModal.hide();" *ngIf="patients && getPatientId(clonedPatientName, patients)">Clone</a>
                     <a class="btn btn-default" (click)="cloneModal.hide()">Cancel</a>
                 </div>
             </div>
