update to clone

--- a/src/app/forms/form-1-edit.component.html
+++ b/src/app/forms/form-1-edit.component.html
@@ -728,7 +728,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <a class="btn btn-primary" (click)="cloneForm();cloneModal.hide();" *ngIf="patients && getPatientId(clonedPatientName, patients)">Clone</a>
+                    <a class="btn btn-primary" (click)="cloneForm();cloneModal.hide();" *ngIf="getPatientId(clonedPatientName, patients)">Clone</a>
                     <a class="btn btn-default" (click)="cloneModal.hide()">Cancel</a>
                 </div>
             </div>
