--- a/src/app/patient/patient.component.html
+++ b/src/app/patient/patient.component.html
@@ -32,5 +32,8 @@
         <a class="btn btn-primary" (click)="onAdd(2)">
             <i class="glyphicon glyphicon-plus"></i> Low Back
         </a>
+        <a class="btn btn-primary" (click)="onAdd(3)">
+            <i class="glyphicon glyphicon-plus"></i> Neck/LB
+        </a>    
     </div>
 </div>
