--- a/src/app/patient/patient.component.html
+++ b/src/app/patient/patient.component.html
@@ -35,5 +35,8 @@
         <a class="btn btn-primary" (click)="onAdd(3)">
             <i class="glyphicon glyphicon-plus"></i> Neck/LB
         </a>    
+        <a class="btn btn-primary" (click)="onAdd(4)">
+            <i class="glyphicon glyphicon-plus"></i> Shoulder
+        </a>
     </div>
 </div>
