updates to form 1 print preview

--- a/src/app/forms/form-1-edit.component.html
+++ b/src/app/forms/form-1-edit.component.html
@@ -282,8 +282,7 @@
                 <div class="col-md-10">
                     <div class="checkbox group">
                         <label>
-                            <input type="checkbox" name="q134" [(ngModel)]="form.questions[134].checked" 
-                                (change)="form.questions[135].checked = !form.questions[134].checked">
+                            <input type="checkbox" name="q134" [(ngModel)]="form.questions[134].checked">
                             <span>{{form.questions[134].question}}</span>
                         </label>
                         <label>
@@ -306,13 +305,11 @@
                 <div class="col-md-10">
                     <div class="checkbox group">
                         <label>
-                            <input type="checkbox" name="q137" [(ngModel)]="form.questions[137].checked" 
-                                (change)="form.questions[138].checked = !form.questions[137].checked">
+                            <input type="checkbox" name="q137" [(ngModel)]="form.questions[137].checked">
                             <span>{{form.questions[137].question}}</span>
                         </label>
                         <label>
-                            <input type="checkbox" name="q138" [(ngModel)]="form.questions[138].checked" 
-                                (change)="form.questions[137].checked = !form.questions[138].checked">
+                            <input type="checkbox" name="q138" [(ngModel)]="form.questions[138].checked">
                             <span>{{form.questions[138].question}}</span>
                         </label>
                     </div>
