--- a/src/app/forms/form-4-print.component.html
+++ b/src/app/forms/form-4-print.component.html
@@ -11,35 +11,30 @@
 
     <label class="subHeader">Subjective:</label>
 
-    <div *ngIf="getAnswers(form.questions.slice(0, 37))" >
-        <label class="section">Pain:</label>    
-        <div>{{getAnswers(form.questions.slice(0, 37))}}</div>
+    <div *ngIf="getAnswers(form.questions.slice(0, 37))" class="section">
+        <label>Pain:</label> {{getAnswers(form.questions.slice(0, 37))}}
     </div>    
 
-    <div *ngIf="getAnswers(form.questions.slice(37, 69))" >
-        <label class="section">Function:</label>    
-        <div>{{getAnswers(form.questions.slice(37, 69))}}</div>
+    <div *ngIf="getAnswers(form.questions.slice(37, 69))" class="section">
+        <label>Function:</label> {{getAnswers(form.questions.slice(37, 69))}}
     </div> 
 
     <label class="subHeader">Objective:</label>
 
     <div *ngIf="form.questions[69].checked" class="section">
-        <span class="section">{{form.questions[69].question}}</span>
-        <span *ngIf="form.questions[69].answer" class="multiline">{{form.questions[69].answer}}</span>
+        <label>{{form.questions[69].question}}</label> {{form.questions[69].answer}}
     </div>
 
-    <div *ngIf="getAnswers(form.questions.slice(70, 95))">
-        <label class="section">STM/MFR:</label>    
-        <div>{{getAnswers(form.questions.slice(70, 95))}}</div>
+    <div *ngIf="getAnswers(form.questions.slice(70, 95))" class="section">
+        <label>STM/MFR:</label> {{getAnswers(form.questions.slice(70, 95))}}
     </div> 
 
-    <div *ngIf="getAnswers(form.questions.slice(95, 169))">
-        <label class="section">NMT (MTrP/ischaemic bands release):</label>    
-        <div>{{getAnswers(form.questions.slice(95, 169))}}</div>
+    <div *ngIf="getAnswers(form.questions.slice(95, 169))" class="section">
+        <label>NMT (MTrP/ischaemic bands release):</label> {{getAnswers(form.questions.slice(95, 169))}}
     </div> 
 
-    <div *ngIf="getAnswers(form.questions.slice(169, 177))">
-        <label class="section">Manual Stretching:</label>
+    <div *ngIf="getAnswers(form.questions.slice(169, 177))" class="section">
+        <label>Manual Stretching:</label>
         <span *ngIf="form.questions[169].checked">{{form.questions[169].question}}</span>
         <span *ngIf="getAnswers(form.questions.slice(170, 173))">
             ({{getAnswers(form.questions.slice(170, 173))}})
@@ -47,59 +42,48 @@
         <span>{{getAnswers(form.questions.slice(173, 177))}}</span>
     </div>
 
-    <div *ngIf="getAnswers(form.questions.slice(177, 215))" >
-        <label class="section">ROM:</label>    
-        <div>{{getAnswers(form.questions.slice(177, 215))}}</div>
+    <div *ngIf="getAnswers(form.questions.slice(177, 215))" class="section">
+        <label>ROM:</label> {{getAnswers(form.questions.slice(177, 215))}}
     </div>
 
-    <div *ngIf="getAnswers(form.questions.slice(215, 266))" >
-        <label class="section">Joint mobilizations:</label>    
-        <div>{{getAnswers(form.questions.slice(215, 266))}}</div>
+    <div *ngIf="getAnswers(form.questions.slice(215, 266))" class="section">
+        <label>Joint mobilizations:</label> {{getAnswers(form.questions.slice(215, 266))}}
     </div>
 
-    <div *ngIf="getAnswers(form.questions.slice(266, 286))" >
-        <label class="section">NM Re-education:</label>    
-        <div>{{getAnswers(form.questions.slice(266, 286))}}</div>
+    <div *ngIf="getAnswers(form.questions.slice(266, 286))" class="section">
+        <label>NM Re-education:</label> {{getAnswers(form.questions.slice(266, 286))}}
     </div>
 
-    <div *ngIf="getAnswers(form.questions.slice(286, 318))" >
-        <label class="section">Therapeutic exercises:</label>    
-        <div>{{getAnswers(form.questions.slice(286, 318))}}</div>
+    <div *ngIf="getAnswers(form.questions.slice(286, 318))" class="section">
+        <label>Therapeutic exercises:</label> {{getAnswers(form.questions.slice(286, 318))}}
     </div>
 
-    <div *ngIf="getAnswers(form.questions.slice(318, 332))" >
-        <label class="section">Kinetic/functional activities:</label>    
-        <div>{{getAnswers(form.questions.slice(318, 332))}}</div>
+    <div *ngIf="getAnswers(form.questions.slice(318, 332))" class="section">
+        <label>Kinetic/functional activities:</label> {{getAnswers(form.questions.slice(318, 332))}}
     </div>
 
-    <div *ngIf="getAnswers(form.questions.slice(332, 345))" >
-        <label class="section">Patient education:</label>    
-        <div>{{getAnswers(form.questions.slice(332, 345))}}</div>
+    <div *ngIf="getAnswers(form.questions.slice(332, 345))" class="section">
+        <label>Patient education:</label> {{getAnswers(form.questions.slice(332, 345))}}
     </div>
 
-    <div *ngIf="getAnswers(form.questions.slice(345, 357))" >
-        <label class="section">ULRASOUND:</label>    
-        <div>{{getAnswers(form.questions.slice(345, 357))}}</div>
+    <div *ngIf="getAnswers(form.questions.slice(345, 357))" class="section">
+        <label>ULRASOUND:</label> {{getAnswers(form.questions.slice(345, 357))}}
     </div>
 
     <div *ngIf="form.questions[357].answer" class="section">
-        <label>Phonophoresis:</label>
-        <span  class="multiline">{{form.questions[357].answer}}</span>
+        <label>Phonophoresis:</label> {{form.questions[357].answer}}
     </div>
 
-    <div *ngIf="getAnswers(form.questions.slice(358, 367))" >
-        <label class="section">MHP:</label>    
-        <div>{{getAnswers(form.questions.slice(358, 367))}}</div>
+    <div *ngIf="getAnswers(form.questions.slice(358, 367))" class="section">
+        <label>MHP:</label> {{getAnswers(form.questions.slice(358, 367))}}
     </div>
 
-    <div *ngIf="getAnswers(form.questions.slice(367, 383))" >
-        <label class="section">EStim:</label>    
-        <div>{{getAnswers(form.questions.slice(367, 383))}}</div>
+    <div *ngIf="getAnswers(form.questions.slice(367, 383))" class="section">
+        <label>EStim:</label> {{getAnswers(form.questions.slice(367, 383))}}
     </div>
 
-    <div *ngIf="getAnswers(form.questions.slice(383, 388))" >
-        <label class="section">Modalities:</label>    
-        <div>{{getAnswers(form.questions.slice(383, 388))}}</div>
+    <div *ngIf="getAnswers(form.questions.slice(383, 388))" class="section">
+        <label>Modalities:</label> {{getAnswers(form.questions.slice(383, 388))}}
     </div>
 
     <div *ngIf="getAnswers(form.questions.slice(388, 412))" >
