--- a/src/app/forms/form-1-print.component.html
+++ b/src/app/forms/form-1-print.component.html
@@ -131,10 +131,10 @@
         <span *ngIf="form.questions[129].checked">{{form.questions[129].question}}</span><span *ngIf="form.questions[129].checked && getAnswers(form.questions.slice(130, 134))">,</span>
         
         <span *ngIf="getAnswers(form.questions.slice(130, 133))">
-            <span *ngIf="form.questions[130].checked">{{form.questions[130].question}}</span><span *ngIf="getAnswers(form.questions.slice(131, 134))"> ({{getAnswers(form.questions.slice(131, 133))}})</span>
-        </span>
+            <span *ngIf="form.questions[130].checked">{{form.questions[130].question}}</span><span *ngIf="getAnswers(form.questions.slice(131, 133))"> ({{getAnswers(form.questions.slice(131, 133))}})</span>
+        </span><span *ngIf="getAnswers(form.questions.slice(130, 133)) && form.questions[133].answer">,</span>
 
-        <div *ngIf="form.questions[133].answer" class="multiline">{{form.questions[133].answer}}</div>
+        <span *ngIf="form.questions[133].answer" class="multiline">{{form.questions[133].answer}}</span>
     </div>
 
     <div *ngIf="getAnswers(form.questions.slice(134, 137))" class="section">
