--- a/src/app/forms/form-1-edit.component.html
+++ b/src/app/forms/form-1-edit.component.html
@@ -76,6 +76,9 @@
                 <label *ngFor="let question of form.questions.slice(0, 34)">
                     <input type="checkbox" name="{{'q' + question.index}}" [(ngModel)]="question.checked"> 
                     <span>{{question.question}}</span>
+                </label><label>
+                    <input type="checkbox" name="q348" [(ngModel)]="form.questions[348].checked"> 
+                    <span>{{form.questions[348].question}}</span>
                 </label>
             </div>
 
