--- a/src/app/forms/form-1-print.component.html
+++ b/src/app/forms/form-1-print.component.html
@@ -11,12 +11,12 @@
 
     <label class="subHeader">Subjective:</label>
 
-    <div *ngIf="getAnswers(form.questions.slice(0, 35))" class="section">
-        <label>Pain:</label> {{getAnswers(form.questions.slice(0, 35))}}
+    <div *ngIf="getAnswers(form.questions.slice(0, 35)) || form.questions[348].checked" class="section">
+        <label>Pain:</label> {{getAnswers(form.questions.slice(0, 34).concat(form.questions.slice(348, 349), form.questions.slice(34, 35)))}}
     </div>
 
-    <div *ngIf="getAnswers(form.questions.slice(38, 60))" class="section">
-        <label>Function:</label> {{getAnswers(form.questions.slice(38, 60))}}
+    <div *ngIf="getAnswers(form.questions.slice(35, 60))" class="section">
+        <label>Function:</label> {{getAnswers(form.questions.slice(35, 60))}}
     </div> 
 
     <label class="subHeader">Objective:</label>
