--- a/src/app/forms/form-3-print.component.html
+++ b/src/app/forms/form-3-print.component.html
@@ -15,8 +15,8 @@
 
     <label class="subHeader">Subjective:</label>
 
-    <div *ngIf="getAnswers(form.questions.slice(0, 41))" class="section">
-        <label>Pain:</label> {{getAnswers(form.questions.slice(0, 41))}}
+    <div *ngIf="getAnswers(form.questions.slice(0, 41)) || form.questions[476].checked" class="section">
+        <label>Pain:</label> {{getAnswers(form.questions.slice(0, 40).concat(form.questions.slice(476, 477), form.questions.slice(40, 41)))}}
     </div>
 
     <div *ngIf="getAnswers(form.questions.slice(41, 69))" class="section">
