--- a/src/app/forms/form-3-print.component.html
+++ b/src/app/forms/form-3-print.component.html
@@ -264,153 +264,85 @@
                 <label>Suboccipital release:</label> {{getAnswers(form.questions.slice(188, 191))}}
             </div>
 
-
             <!-- “Global stretch” -->
             <div *ngIf="getAnswers(form.questions.slice(191, 199))" class="section">
                 <label *ngIf="form.questions[191].checked">{{form.questions[191].question}}:</label>
                 <span *ngIf="form.questions[192].checked">{{form.questions[192].question}}</span>
                 <span *ngIf="getAnswers(form.questions.slice(193, 195))">({{getAnswers(form.questions.slice(193, 195))}})</span>
-                <span
-                    *ngIf="getAnswers(form.questions.slice(124, 127)) && getAnswers(form.questions.slice(127, 131))">,</span>
-                    <span *ngIf="form.questions[195].checked">{{form.questions[195].question}}</span>
-                    <span *ngIf="getAnswers(form.questions.slice(196, 198))">({{getAnswers(form.questions.slice(196, 198))}})</span>
-                    <span *ngIf="getAnswers(form.questions.slice(191, 198)) && form.questions[198].answer">,</span>
-                    <span *ngIf="form.questions[198].answer" class="multiline">{{form.questions[198].answer}}</span>
+                <span *ngIf="getAnswers(form.questions.slice(192, 195)) && getAnswers(form.questions.slice(195, 198))">,</span>
+                <span *ngIf="form.questions[195].checked">{{form.questions[195].question}}</span>
+                <span *ngIf="getAnswers(form.questions.slice(196, 198))">({{getAnswers(form.questions.slice(196, 198))}})</span>
+                <span *ngIf="getAnswers(form.questions.slice(191, 198)) && form.questions[198].answer">,</span>
+                <span *ngIf="form.questions[198].answer" class="multiline">{{form.questions[198].answer}}</span>
             </div>
 
             <div *ngIf="getAnswers(form.questions.slice(199, 221))" class="section">
                 <label>ROM:</label> {{getAnswers(form.questions.slice(199, 221))}}
             </div>
 
-
-
             <label *ngIf="getAnswers(form.questions.slice(221, 280))" class="section">Joint mobilizations:</label>
-            <!-- “” -->
-            {{getAnswers(form.questions.slice(221, 227))}}
-            <span *ngIf="getAnswers(form.questions.slice(227, 280))">,</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(227, 229))">
-                        {{getAnswers(form.questions.slice(227, 229))}}
-                </span>
+            <span *ngIf="getAnswers(form.questions.slice(221, 229))">{{getAnswers(form.questions.slice(221, 229))}}</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(229, 231))">
-                        ({{getAnswers(form.questions.slice(229, 231))}})
-                </span>
-            <span *ngIf="getAnswers(form.questions.slice(231, 280))">,</span> {{form.questions[231].answer}}
+            <span *ngIf="getAnswers(form.questions.slice(229, 231))">({{getAnswers(form.questions.slice(229, 231))}})</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(231, 280))">,</span>
+            <span *ngIf="getAnswers(form.questions.slice(221, 231)) && getAnswers(form.questions.slice(231, 239))">,</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(232, 235))">
-                        {{getAnswers(form.questions.slice(232, 235))}}
-                </span>
-            <span *ngIf="getAnswers(form.questions.slice(235, 280))">,</span>
+            <span *ngIf="getAnswers(form.questions.slice(231, 237))">{{getAnswers(form.questions.slice(231, 237))}}</span>
 
+            <span *ngIf="getAnswers(form.questions.slice(237, 239))">({{getAnswers(form.questions.slice(237, 239))}})</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(235, 237))">
-                        {{getAnswers(form.questions.slice(235, 237))}}
-                </span>
+            <span *ngIf="getAnswers(form.questions.slice(221, 239)) && getAnswers(form.questions.slice(239, 244))">,</span>
+            
+            <span *ngIf="getAnswers(form.questions.slice(239, 242))">{{getAnswers(form.questions.slice(239, 242))}}</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(237, 239))">
-                        ({{getAnswers(form.questions.slice(237, 239))}})
-                </span>
-            <span *ngIf="getAnswers(form.questions.slice(239, 280))">,</span> {{form.questions[239].answer}}
+            <span *ngIf="getAnswers(form.questions.slice(242, 244))">({{getAnswers(form.questions.slice(242, 244))}})</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(240, 280))">,</span>
+            <span *ngIf="getAnswers(form.questions.slice(221, 244)) && getAnswers(form.questions.slice(244, 249))">,</span>
 
+            <span *ngIf="getAnswers(form.questions.slice(244, 247))">{{getAnswers(form.questions.slice(244, 247))}}</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(240, 242))">
-                        {{getAnswers(form.questions.slice(240, 242))}}
-                </span>
+            <span *ngIf="getAnswers(form.questions.slice(247, 249))">({{getAnswers(form.questions.slice(247, 249))}})</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(242, 244))">
-                        ({{getAnswers(form.questions.slice(242, 244))}})
-                </span>
-            <span *ngIf="getAnswers(form.questions.slice(244, 280))">,</span> {{form.questions[244].answer}}
+            <span *ngIf="getAnswers(form.questions.slice(221, 249)) && getAnswers(form.questions.slice(249, 254))">,</span>
 
+            <span *ngIf="getAnswers(form.questions.slice(249, 252))">{{getAnswers(form.questions.slice(249, 252))}}</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(245, 280))">,</span>
+            <span *ngIf="getAnswers(form.questions.slice(252, 254))">({{getAnswers(form.questions.slice(252, 254))}})</span>
 
+            <span *ngIf="getAnswers(form.questions.slice(221, 254)) && getAnswers(form.questions.slice(254, 259))">,</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(245, 247))">
-                        {{getAnswers(form.questions.slice(245, 247))}}
-                </span>
+            <span *ngIf="getAnswers(form.questions.slice(254, 257))">{{getAnswers(form.questions.slice(254, 257))}}</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(247, 249))">
-                        ({{getAnswers(form.questions.slice(247, 249))}})
-                </span>
-            <span *ngIf="getAnswers(form.questions.slice(249, 280))">,</span> {{form.questions[249].answer}}
+            <span *ngIf="getAnswers(form.questions.slice(257, 259))">({{getAnswers(form.questions.slice(257, 259))}})</span>
 
+            <span *ngIf="getAnswers(form.questions.slice(221, 259)) && getAnswers(form.questions.slice(259, 264))">,</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(250, 280))">,</span>
+            <span *ngIf="getAnswers(form.questions.slice(259, 262))">{{getAnswers(form.questions.slice(259, 262))}}</span>
 
+            <span *ngIf="getAnswers(form.questions.slice(262, 264))">({{getAnswers(form.questions.slice(262, 264))}})</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(250, 252))">
-                        {{getAnswers(form.questions.slice(250, 252))}}
-                </span>
+            <span *ngIf="getAnswers(form.questions.slice(221, 264)) && getAnswers(form.questions.slice(264, 268))">,</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(252, 254))">
-                        ({{getAnswers(form.questions.slice(252, 254))}})
-                </span>
-            <span *ngIf="getAnswers(form.questions.slice(254, 280))">,</span> {{form.questions[254].answer}}
+            <span *ngIf="getAnswers(form.questions.slice(264, 266))">{{getAnswers(form.questions.slice(264, 266))}}</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(255, 280))">,</span>
+            <span *ngIf="getAnswers(form.questions.slice(266, 268))">({{getAnswers(form.questions.slice(266, 268))}})</span>
 
+            <span *ngIf="getAnswers(form.questions.slice(221, 268)) && getAnswers(form.questions.slice(268, 273))">,</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(255, 257))">
-                        {{getAnswers(form.questions.slice(255, 257))}}
-                </span>
+            <span *ngIf="getAnswers(form.questions.slice(268, 271))">{{getAnswers(form.questions.slice(268, 271))}}</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(257, 259))">
-                        ({{getAnswers(form.questions.slice(257, 259))}})
-                </span>
-            <span *ngIf="getAnswers(form.questions.slice(259, 280))">,</span> {{form.questions[259].answer}}
+            <span *ngIf="getAnswers(form.questions.slice(271, 273))">({{getAnswers(form.questions.slice(271, 273))}})</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(260, 280))">,</span>
+            <span *ngIf="getAnswers(form.questions.slice(221, 273)) && getAnswers(form.questions.slice(273, 278))">,</span>
 
+            <span *ngIf="getAnswers(form.questions.slice(273, 276))">{{getAnswers(form.questions.slice(273, 276))}}</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(260, 262))">
-                        {{getAnswers(form.questions.slice(260, 262))}}
-                </span>
+            <span *ngIf="getAnswers(form.questions.slice(276, 278))">({{getAnswers(form.questions.slice(276, 278))}})</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(262, 264))">
-                        ({{getAnswers(form.questions.slice(262, 264))}})
-                </span>
-            <span *ngIf="getAnswers(form.questions.slice(264, 280))">,</span> {{form.questions[264].answer}}
+            <span *ngIf="getAnswers(form.questions.slice(221, 278)) && getAnswers(form.questions.slice(278, 280))">,</span>
 
-            <span *ngIf="getAnswers(form.questions.slice(265, 280))">,</span>
-
-            <span *ngIf="getAnswers(form.questions.slice(265, 266))">
-                        {{getAnswers(form.questions.slice(265, 266))}}
-                </span>
-
-            <span *ngIf="getAnswers(form.questions.slice(266, 268))">
-                        ({{getAnswers(form.questions.slice(266, 268))}})
-                </span>
-            <span *ngIf="getAnswers(form.questions.slice(268, 280))">,</span> {{form.questions[268].answer}}
-
-            <span *ngIf="getAnswers(form.questions.slice(269, 280))">,</span>
-
-            <span *ngIf="getAnswers(form.questions.slice(269, 271))">
-                        {{getAnswers(form.questions.slice(269, 271))}}
-                </span>
-
-            <span *ngIf="getAnswers(form.questions.slice(271, 273))">
-                        ({{getAnswers(form.questions.slice(271, 273))}})
-                </span>
-            <span *ngIf="getAnswers(form.questions.slice(273, 280))">,</span> {{form.questions[273].answer}}
-
-            <span *ngIf="getAnswers(form.questions.slice(274, 280))">,</span>
-
-            <span *ngIf="getAnswers(form.questions.slice(274, 276))">
-                        {{getAnswers(form.questions.slice(274, 276))}}
-                </span>
-
-            <span *ngIf="getAnswers(form.questions.slice(276, 278))">
-                        ({{getAnswers(form.questions.slice(276, 278))}})
-                </span>
-            <span *ngIf="getAnswers(form.questions.slice(278, 280))">,</span>
             <span *ngIf="getAnswers(form.questions.slice(278, 280))">{{getAnswers(form.questions.slice(278, 280))}}</span>
-
 
             <div *ngIf="getAnswers(form.questions.slice(280, 293))" class="section">
                 <label>MET:</label> {{getAnswers(form.questions.slice(280, 293))}}
