--- a/src/app/forms/form-3-print.component.html
+++ b/src/app/forms/form-3-print.component.html
@@ -139,7 +139,7 @@
                     <span *ngIf="form.questions[122].checked">{{form.questions[122].question}}</span>
         <span *ngIf="getAnswers(form.questions.slice(123, 125))"> ({{getAnswers(form.questions.slice(123, 125))}})</span>
         <span *ngIf="getAnswers(form.questions.slice(125, 174))">,</span>
-        </span>getAnswers
+        </span>
 
         <span *ngIf="getAnswers(form.questions.slice(125, 128))">
                     <span *ngIf="form.questions[125].checked">{{form.questions[125].question}}</span>
